# ROM

./: setup.cfg  setup.py  test.py
ROM/: __init__.py  core.py  processor.py
ROM/assessment/: metrics.py  movements.py
ROM/demo/: config_example_clean.toml  correcttoml.py
ROM/utils/: angle_calc.py  filtering.py  skeletal_models.py
ROM/visualization/: display.py  reporting.py
rom_assessment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
