[metadata]
name = rom-assessment
version = attr: ROM.__version__
author = Your Name
author_email = your.email@example.com
description = Range of Motion Assessment Tool for Remote Physiotherapy
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/yourusername/ROM
keywords = physiotherapy, range of motion, joint angles, motion analysis, telehealth, remote assessment, rehabilitation, musculoskeletal, biomechanics
license = MIT License
license_files = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Multimedia :: Video
project_urls = 
    Bug Tracker = https://github.com/yourusername/ROM/issues
    Documentation = https://github.com/yourusername/ROM#readme

[options]
zip_safe = False
python_requires = >=3.7, <4
packages = find:
install_requires =
    numpy>=1.19.0
    pandas>=1.0.0
    matplotlib>=3.1.0
    opencv-python>=4.5.0
    scipy>=1.5.0
    toml>=0.10.0
    tqdm>=4.45.0
    reportlab>=3.6.0  # For PDF report generation

# These are optional dependencies that provide additional functionality
[options.extras_require]
rtmlib =
    # For RTMLib pose estimation
    rtmlib>=0.1.0
    onnxruntime>=1.7.0
    openvino>=2022.1.0

mediapipe =
    # For MediaPipe pose estimation
    mediapipe>=0.8.0

visualization =
    # For advanced visualization
    plotly>=4.14.0
    seaborn>=0.11.0

[options.entry_points]
console_scripts =
    rom = ROM.core:main

[options.package_data]
ROM =
    demo/*
    demo/**/*

[bdist_wheel]
universal = 1

[flake8]
exclude = .git,__pycache__,build,dist
max-line-length = 100
ignore = E203,W503